--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/css/custom.css">
     <title>Boostrap</title>
 </head>
 <body> 
@@ -15,9 +16,9 @@
             <div class="row h-100 d-flex justify-content-center align-items-center">
                 <div class="col-10">
                     <div class="card shadow">
-                        <div class="card-body text-center py-3 px-4">
+                        <div class="card-body text-center py-3 px-2">
                             <img src="/Img/Zoro1.png" class="rounded-circle" alt="">
-                            <h3 class="text-uppercase">HI! I am Roronoa Zoro</h3>
+                            <h3 class="text-uppercase font">HI! I am Roronoa Zoro</h3>
                             <p class="font-weight-normal small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quaerat soluta reiciendis, cumque labore, sint explicabo beatae rerum, vel odio recusandae nulla provident reprehenderit cupiditate!</p>
                             <br>
                             <br>
